--- a/Frontend/task2/index.html
+++ b/Frontend/task2/index.html
@@ -24,10 +24,10 @@
 						<input type="url" class="form-control input-sm" id="email" required>
 					</div>
 				</div>
-				<div class="form-group form-group-sm">				
+				<div class="form-group form-group-sm required">				
 					<label class="col-sm-2 control-label" for="phone">Номер телефона</label>
 					<div class="col-sm-3">
-						<input type="text" placeholder="xxx xxx-xx-xx" class="form-control input-sm" id="phone">				
+						<input type="text" pattern="[0-9]{3}\s[0-9]{3}-[ 0-9]{2}-[ 0-9]{ 2 }" placeholder="xxx xxx-xx-xx" class="form-control input-sm" id="phone" required>				
 					</div>	
 				</div>
 				<div class="form-group form-group-sm">				
@@ -48,7 +48,14 @@
 				<div class="form-group form-group-sm">				
 					<label class="col-sm-2 control-label" for="country">Страна</label>
 					<div class="col-sm-3">
-						<input type="text" class="form-control input-sm" id="country">				
+						<input type="text" class="form-control input-sm" list="countries" id="country" autocomplete>
+						<datalist id="countries">
+							<option value="Беларусь">
+							<option value="Россия">
+							<option value="Украина">
+							<option value="Польша">
+							<option value="Казакстан">
+						</datalist>
 					</div>	
 				</div>
 				<div class="form-group form-group-sm">				
